--- a/templates/login.html
+++ b/templates/login.html
@@ -1,48 +1,76 @@
 {% extends 'base.html' %} 
  
-{% block content %} 
-<div> 
-    <img src="js/images/asa.PNG" class="left-img">
-    <h1> Аварийный доступ</h1> 
-</div> 
-<form action="" class="login-form" method="POST" novalidate> 
-    {{ form.hidden_tag() }} 
-    <p> 
-        {{ form.astronaut_id.label }}<br> 
-        {{ form.astronaut_id(class="form-control") }}<br> 
-        {% for error in form.astronaut_id.errors %} 
-        <div class="alert alert-danger" role="alert"> 
-            {{ error }} 
-        </div> 
-        {% endfor %} 
-    </p> 
-    <p> 
-        {{ form.astronaut_pass.label }}<br> 
-        {{ form.astronaut_pass(class="form-control", type="password") }}<br> 
-        {% for error in form.astronaut_pass.errors %} 
-        <div class="alert alert-danger" role="alert"> 
-            {{ error }} 
-        </div> 
-        {% endfor %} 
-    </p> 
-    <p> 
-        {{ form.capitan_id.label }}<br> 
-        {{ form.capitan_id(class="form-control") }}<br> 
-        {% for error in form.capitan_id.errors %} 
-        <div class="alert alert-danger" role="alert"> 
-            {{ error }} 
-        </div> 
-        {% endfor %} 
-    </p> 
-    <p> 
-        {{ form.capitan_token.label }}<br> 
-        {{ form.capitan_token(class="form-control", type="password") }}<br> 
-        {% for error in form.capitan_token.errors %} 
-        <div class="alert alert-danger" role="alert"> 
-            {{ error }} 
-        </div> 
-        {% endfor %} 
-    </p> 
-    <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p> 
-</form> 
+{% block title %}
+Login
+{% endblock %}
+
+{% block navbar %}
+<div class="collapse navbar-collapse" id="navbar">
+  <div class="navbar-nav">
+    <div class="logo">
+      <img src="static/img/logo.png" alt="logo" width="300" height="80">
+    </div>
+    <div class="home-btn">
+      <a id="home" href="/">
+        <input type="submit" value="Главная" />
+      </a>
+    </div>
+    <div class="about-btn">
+      <a id="about" href="/">
+        <input type="submit" value="О нас" />
+      </a>
+    </div>
+    <div class="contacts-btn">
+      <a id="contacts" href="/">
+        <input type="submit" value="Контакты" />
+      </a>
+    </div>
+    <div class="signup-btn">
+      <a id="signup" href="/signup">
+        <input type="submit" value="Зарегистрироваться" />
+      </a>
+    </div>
+  </div>
+</div>
+{% endblock %}
+
+{% block content %}
+<div class="login-form">
+    <center>
+       <h1>Вход</h1> 
+    </center>
+    <form action="" method="post" novalidate>
+        {{ form.hidden_tag() }}
+        <p>
+            {{ form.username.label }}<br>
+            {{ form.username(class="form-control") }}<br>
+            {% for error in form.username.errors %}
+                <div class="alert alert-danger" role="alert">
+                    {{ error }}
+                </div>
+            {% endfor %}
+        </p>
+        <p>
+            {{ form.password.label }}<br>
+            {{ form.password(class="form-control", type="password") }}<br>
+            {% for error in form.password.errors %}
+                <div class="alert alert-danger" role="alert">
+                    {{ error }}
+                </div>
+            {% endfor %}
+        </p>
+        <center>
+            <p>
+                {{ form.submit(type="submit", class="btn btn-primary") }}
+            </p>
+        </center>
+        <center>
+            <div class="signup-btn-2">
+              <a id="signup" href="/signup">
+                <input type="submit" value="Зарегистрироваться" />
+              </a>
+            </div>   
+        </center>
+    </form>
+</div>
 {% endblock %}
