решена проблема регистрации (выходит сообщение о проблеме вызванной при регистрации)

--- a/website/templates/sign_up.html
+++ b/website/templates/sign_up.html
@@ -59,5 +59,7 @@ Login
       </div>
       <button type="submit" class="form-singup-button">Зарегистрироваться</button>
     </form>
+    <br>
+    <p style="color: red;">{{ message }}</p>
 </div>
 {% endblock %}
