корректирую name для coordinates

--- a/website/templates/send_task.html
+++ b/website/templates/send_task.html
@@ -48,7 +48,8 @@ Home
     </center>
     <form method="POST">
         <div>
-            <input type="text" class="form-control" id="coordinates" name="email" placeholder="Введите координаты"/>
+            <input type="text" class="form-control" id="coordinates" name="coordinates"
+                   placeholder="Введите координаты"/>
         </div>
         <div class="note-area">
             <textarea name="description" id="description" class="form-control"
