добавление формы решения проблемы, вместе с выбором фотографии в качестве доказательства

--- a/website/static/css/style.css
+++ b/website/static/css/style.css
@@ -195,6 +195,12 @@ div.note-block {
 	width: 60%;
 }
 
+div.solve-note-block {
+	margin-top: 50px;
+	margin-left: 220px;
+	width: 60%;
+}
+
 div.exit-btn input {
 	position: absolute;
 	right: 120px;
