--- a/website/templates/show_task.html
+++ b/website/templates/show_task.html
@@ -1,53 +1,72 @@
-{% extends 'base.html' %} 
- 
+{% extends 'base.html' %}
+
 {% block title %}
 Home
 {% endblock %}
 
 {% block navbar %}
 <nav class="navbar navbar-expand-lg navbar-light">
-  <div class="collapse navbar-collapse" id="navbar">
-    <div class="navbar-nav">
-      <div class="logo">
-        <img src="static/img/logo.png" alt="logo" width="300" height="80">
-      </div>
-      <div class="forum-btn">
-        <a id="forum" href="/home">
-          <input type="submit" value="Форум" />
-        </a>
-      </div>
-      <div class="send-req-btn">
-        <a id="send" href="/send_task">
-          <input type="submit" value="Отправить заявку" />
-        </a>
-      </div>
-      <div class="show-req-btn">
-        <a id="show" href="/show_task">
-          <input type="submit" value="Мои заявки" />
-        </a>
-      </div>
-      <div class="contacts-btn">
-        <a id="contacts" href="/contacts-login">
-          <input type="submit" value="Контакты" />
-        </a>
-      </div>
-      <div class="enter-btn">
-        <a id="enter" href="/">
-          <input type="submit" value="Выйти" />
-        </a>
-      </div>
+    <div class="collapse navbar-collapse" id="navbar">
+        <div class="navbar-nav">
+            <div class="logo">
+                <img src="static/img/logo.png" alt="logo" width="300" height="80">
+            </div>
+            <div class="forum-btn">
+                <a id="forum" href="/home">
+                    <input type="submit" value="Форум" />
+                </a>
+            </div>
+            <div class="send-req-btn">
+                <a id="send" href="/send_task">
+                    <input type="submit" value="Отправить заявку" />
+                </a>
+            </div>
+            <div class="show-req-btn">
+                <a id="show" href="/show_task">
+                    <input type="submit" value="Мои заявки" />
+                </a>
+            </div>
+            <div class="contacts-btn">
+                <a id="contacts" href="/contacts-login">
+                    <input type="submit" value="Контакты" />
+                </a>
+            </div>
+            <div class="enter-btn">
+                <a id="enter" href="/">
+                    <input type="submit" value="Выйти" />
+                </a>
+            </div>
+        </div>
     </div>
-  </div>
 </nav>
 {% endblock %}
 
 {% block content %}
 <center>
-  <h1>My tasks</h1>
+    <h1>My tasks</h1>
 </center>
 {% for note in user.notes %}
 <li class="list-group-item">
-  {{ note.data }}
+    {{ loop.index }} | {{ note.data }}
 </li>
 {% endfor %}
+
+<div class="solve-note-block">
+    <center>
+        <h1>Решить проблему</h1>
+    </center>
+    <form method="POST">
+        <div>
+            <input type="text" class="form-control" id="task-id" name="task-id" placeholder="Введите id проблемы"/>
+        </div>
+        <div class="mb-3">
+            <label for="formFile" class="form-label">Вставьте фотографию в качестве доказательства решения проблемы</label>
+            <input class="form-control" type="file" id="formFile">
+        </div>
+        <button type="submit" class="form-send-task-button">Отправить</button>
+    </form>
+    <br>
+    <p style="color: red;">{{ message }}</p>
+</div>
+
 {% endblock %}
