решение ошибок по jinja2

--- a/website/templates/show_task.html
+++ b/website/templates/show_task.html
@@ -51,7 +51,7 @@ Home
 </li>
 {% endfor %}
 
-{% if {{ isAdmin }} %}
+{% if isAdmin %}
 <div class="solve-note-block">
     <center>
         <h1>Решить проблему</h1>
