добавление страницы about_us

--- a/website/templates/sign_up.html
+++ b/website/templates/sign_up.html
@@ -17,7 +17,7 @@ Login
           </a>
         </div>
         <div class="about-btn">
-          <a id="about" href="/">
+        <a id="about_us" href="/about_us">
             <input type="submit" value="О нас" />
           </a>
         </div>
