--- a/website/templates/contacts.html
+++ b/website/templates/contacts.html
@@ -17,7 +17,7 @@ Contacts
         </a>
       </div>
       <div class="about-btn">
-        <a id="about" href="/">
+        <a id="about_us" href="/about_us">
           <input type="submit" value="О нас" />
         </a>
       </div>
