изменение путей на страницу about us

--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -17,7 +17,7 @@ Login
           </a>
         </div>
         <div class="about-btn">
-          <a id="about_us" href="/about_us">
+          <a id="about" href="/about">
             <input type="submit" value="О нас" />
           </a>
         </div>
