--- a/website/templates/show_task.html
+++ b/website/templates/show_task.html
@@ -47,7 +47,7 @@ Home
 </center>
 {% for note in user.notes %}
 <li class="list-group-item">
-    {{ loop.index }} | {{ notes[loop.index0] }}
+    {{ loop.index }} | {{ notes[loop.index0][0]}} | {{ notes[loop.index0][1] }}
 </li>
 {% endfor %}
 
