--- a/website/templates/sign_up.html
+++ b/website/templates/sign_up.html
@@ -57,6 +57,11 @@ Login
       <div class="password-confirm-field">
         <input type="password" class="form-control" id="password2" name="password2" placeholder="Подтвердите пароль"/>
       </div>
+      <div class="form-check">
+        <input type="checkbox" class="form-check-input" id="isAdmin" name="isAdmin" >
+        <label class="form-check-label" for="isAdmin">Я буду решать проблемы</label>
+      </div>
+
       <button type="submit" class="form-singup-button">Зарегистрироваться</button>
     </form>
     <br>
